--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "cboden/ratchet": "^0.4.4"
     },
     "require-dev": {
-        "pestphp/pest": "^3.6"
+        "pestphp/pest": "*"
     },
     "config": {
         "allow-plugins": {
